@@ -1,3 +1,15 @@
+2007-03-07  Mitz Pettel  <mitz@webkit.org>
+
+        Reviewed by Darin.
+
+        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13002
+          Incomplete repaint of inset outlines
+
+        * fast/repaint/outline-inset-expected.checksum: Added.
+        * fast/repaint/outline-inset-expected.png: Added.
+        * fast/repaint/outline-inset-expected.txt: Added.
+        * fast/repaint/outline-inset.html: Added.
+
 2007-03-07  Rob Buis  <buis@kde.org>
 
         Reviewed by Darin.
